# GrainWarehouse

./: .gitignore  CMakeLists.txt  main.c
DataStorageStructures/eilė_2/: queue.c  queue.h
DataStorageStructures/stekas_1/: main.c  stack.c  stack.h
